# OpenCv_Msys2

./: .gitignore  1.cpp  1.txt  CMakeLists.txt  Inout.cpp
